# text-editor

./: CMakeLists.txt  Doxyfile  README.md
docs/html/: CMakeCXXCompilerId_8cpp.html  classTextEditor.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_63772b626f2709090f0bdca0f40827b4.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_bc6a3b0fb472479b49787631c6b3e7fb.html  dir_bc6a3b0fb472479b49787631c6b3e7fb.js  dir_f157e96d0daf0d2264565ee607a5217f.html  dir_f157e96d0daf0d2264565ee607a5217f.js  editor_8cpp.html  editor_8h.html  editor_8h_source.html  file__io_8cpp.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  main_8cpp.html  main_8cpp.js  menudata.js  navtreedata.js  navtreeindex0.js
docs/html/search/: all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_d.js  all_e.js  files_2.js  functions_2.js  functions_7.js  functions_9.js  functions_b.js  searchdata.js  variables_0.js  variables_2.js  variables_4.js  variables_5.js
src/: editor.cpp  editor.h  file_io.cpp  main.cpp  tests.cpp
src/docs/html/: annotated.html  annotated_dup.js  classTextEditor-members.html  classTextEditor.html  classTextEditor.js  classes.html  editor_8cpp.html  editor_8h.html  editor_8h.js  editor_8h_source.html  file__io_8cpp.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8cpp.html  menudata.js  navtreedata.js  navtreeindex0.js
(+15 files in other folders)
